Final version reproducible

--- a/02Figure 1.ipynb
+++ b/02Figure 1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-03-26T19:33:01.566142Z",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
      "text": [
       "<>:2: SyntaxWarning: invalid escape sequence '\\g'\n",
       "<>:2: SyntaxWarning: invalid escape sequence '\\g'\n",
-      "C:\\Users\\kitty\\AppData\\Local\\Temp\\ipykernel_21708\\586492383.py:2: SyntaxWarning: invalid escape sequence '\\g'\n",
+      "C:\\Users\\kitty\\AppData\\Local\\Temp\\ipykernel_21892\\3505504439.py:2: SyntaxWarning: invalid escape sequence '\\g'\n",
       "  json_location = 'Data\\genes.json'\n"
      ]
     }
@@ -52,7 +52,7 @@
     "data_file_location = 'Data/all_normalized_data.tsv'\n",
     "json_location = 'Data\\genes.json'\n",
     "fig_1_destination = 'Figures/'\n",
-    "fig_1_file_name = 'Figure_1.jpg'\n"
+    "fig_1_file_name = 'Figure_1.jpg'"
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
     "\n",
     "# Adjust layout\n",
     "plt.tight_layout()\n",
-    "# plt.savefig(fig_1_destination + fig_1_file_name)\n",
+    "plt.savefig(fig_1_destination + fig_1_file_name)\n",
     "plt.show()"
    ]
   }
