fixed bug when a gene was in multiple markers

--- a/tcga/00_data_filtering.ipynb
+++ b/tcga/00_data_filtering.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
     "\n",
     "# we don't need everything - just the genes of interest and ids\n",
     "keep = [\"id\", \"project_id\"]\n",
-    "data = df[keep + [gene for genes in marker_genes.values() for gene in genes]]\n",
+    "data = df[keep + list(set([gene for genes in marker_genes.values() for gene in genes]))]\n",
     "data = data.copy()\n",
     "data[\"project_id\"] = data[\"project_id\"].str[5:]\n",
     "\n",
